hphp/hack/test/typecheck/nonexistent_function.php.exp
File "nonexistent_function.php", line 4, characters 3-14:
Unbound name: `no_such_func` (a global function) (Naming[2049])
File "nonexistent_function.php", line 3, characters 1-43:
Functions that do not return a value must have a type of void (Typing[4422])
File "nonexistent_function.php", line 4, characters 3-14:
Unbound name (typing): `no_such_func` (Typing[4107])
